[gd_scene load_steps=5 format=3 uid="uid://cihuho6da82op"]

[ext_resource type="Script" uid="uid://583in5m6jwjr" path="res://scripts/ui/ability.gd" id="1_2512i"]
[ext_resource type="Texture2D" uid="uid://otvtxyqu8dfr" path="res://assets/ai/ability_icons/heal_ability_icon.jpg" id="2_2512i"]
[ext_resource type="PackedScene" uid="uid://cgrd2w2flg23s" path="res://scenes/ui/die_slot.tscn" id="2_smjc0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyino"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.18039216, 0.18039216, 0.18039216, 0.7294118)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="AbilityUI" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
offset_right = 250.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vyino")
script = ExtResource("1_2512i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_2512i")
expand_mode = 1
stretch_mode = 4

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ability Title"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CooldownLabel" type="Label" parent="VBoxContainer/Header"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="Description" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
bbcode_enabled = true
text = "Deal [color=yellow]X[/color] damage for each die."
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="DiceSlots" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="DieSlotUI" parent="VBoxContainer/HBoxContainer/DiceSlots" instance=ExtResource("2_smjc0")]
layout_mode = 2

[node name="DieSlotUI2" parent="VBoxContainer/HBoxContainer/DiceSlots" instance=ExtResource("2_smjc0")]
layout_mode = 2
